welcome.lessons.welcome.bat.bool1.SumDouble.scala.error
sumDouble:2: error: value unary_! is not a member of Integer
	if (!a=b ) {
            ^